--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
 	margin: 0px auto;
 }
 
+.form-control {
+	margin: 10px 0px;
+}
+.navbar-header {
+	width: 90%;
+}
+
 h1 {
 	text-align: center;
 }
@@ -25,6 +32,8 @@ h4{
 	margin: 10px 0px 0px 0px;
 }
 
+
+
 #submit-comment{
 	float: right;
 }
@@ -34,4 +43,21 @@ h4{
 }
 .message {
 	text-align: left;
+	margin-top: 20px;
+}
+
+.comment {
+	margin-left: 30px;
+}
+
+#message-box {
+	margin-bottom: 50px;
+}
+
+#dojo {
+	margin-left: 20px;
+}
+
+body {
+	padding-top: 70px;
 }
