--- a/style.css
+++ b/style.css
@@ -15,9 +15,6 @@ h1 {
 	text-align: center;
 }
 
-/*p{
-	text-align: center;
-}*/
 
 h4{
 	text-align: center;
@@ -41,6 +38,11 @@ h4{
 .text-danger {
 	text-align: center;
 }
+
+.text-success {
+	text-align: center;
+}
+
 .message {
 	text-align: left;
 	margin-top: 20px;
